--- a/lighting.html
+++ b/lighting.html
@@ -31,10 +31,10 @@
 </div>
 
 <script>
-const webSocket = new WebSocket('ws://192.168.0.99:81');
+const webSocket = new WebSocket('ws://192.168.0.88:81');
 
 webSocket.addEventListener('open', function() {
-    document.getElementById('connectionInfo').innerHTML = 'Connected to ws://192.168.0.99:81';
+    document.getElementById('connectionInfo').innerHTML = 'Connected';
 });
 
 webSocket.addEventListener('close', function() {
