--- a/STEP2.html
+++ b/STEP2.html
@@ -26,6 +26,8 @@
 
 <body style="background-color: black;color:white">
     <h1>THE AIR BETWEEN US</h1>
+
+    <button id="switchCamera">Switch Camera</button>
     <div id="container">
         <video id="video" width="640" height="480" autoplay></video>
         <canvas id="canvas" width="640" height="480"></canvas>
